--- a/composer.json
+++ b/composer.json
@@ -14,6 +14,7 @@
         "laravel/sanctum": "^2.14.1",
         "laravel/socialite": "^5.5",
         "laravel/tinker": "^2.7",
+        "pusher/pusher-php-server": "^7.0",
         "spatie/laravel-sluggable": "^3.4",
         "spatie/laravel-translatable": "^6.0",
         "symfony/http-client": "^6.1",
