--- a/composer.json
+++ b/composer.json
@@ -12,6 +12,7 @@
         "guzzlehttp/guzzle": "^7.2",
         "laravel/framework": "^9.11",
         "laravel/sanctum": "^2.14.1",
+        "laravel/scout": "^9.4",
         "laravel/socialite": "^5.5",
         "laravel/tinker": "^2.7",
         "pusher/pusher-php-server": "^7.0",
@@ -19,6 +20,7 @@
         "spatie/laravel-translatable": "^6.0",
         "symfony/http-client": "^6.1",
         "symfony/mailgun-mailer": "^6.1",
+        "teamtnt/laravel-scout-tntsearch-driver": "^11.6",
         "tymon/jwt-auth": "dev-develop"
     },
     "require-dev": {
