--- a/package.json
+++ b/package.json
@@ -16,5 +16,8 @@
         "lodash": "^4.17.19",
         "postcss": "^8.1.14",
         "pusher-js": "^7.2.0"
+    },
+    "dependencies": {
+        "swagger-ui": "^4.13.2"
     }
 }
