--- a/public/app.yaml
+++ b/public/app.yaml
@@ -7,7 +7,7 @@ info:
 servers:
   - url: http://localhost:8000/api
     description: local server
-  - url: http://producation.app/api
+  - url: https://api-chad-movies.nikoloz.redberryinternship.ge/api
     description: production server
 
 paths:
