--- a/public/app.yaml
+++ b/public/app.yaml
@@ -10,16 +10,208 @@ servers:
   - url: https://api-chad-movies.nikoloz.redberryinternship.ge/api
     description: production server
 
+components:
+  securitySchemes:
+    bearerAuth:
+      type: http
+      scheme: bearer
+      bearerFormat: JWT
+
 paths:
-  /users:
-    get:
-      summary: Returns a list of users.
+  /login:
+    post:
+      summary: User login
       responses:
         "200":
-          description: A JSON array of user names
-          content:
-            application/json:
-              schema:
-                type: array
-                items:
+          description: User logged in successfully
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              type: object
+              properties:
+                email:
                   type: string
+                password:
+                  type: string
+  /register:
+    post:
+      summary: User registration
+      responses:
+        "200":
+          description: User created successfully
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              type: object
+              properties:
+                email:
+                  type: string
+                name:
+                  type: string
+                password:
+                  type: string
+                password_confirmation:
+                  type: string
+  /authorize/google/redirect:
+    get:
+      summary: Google redirect url
+      responses:
+        "200":
+          description: Google callback.
+  /authorize/google/callback:
+    get:
+      responses:
+        "200":
+          description: User created successfully.
+      parameters:
+        - in: path
+          name: code
+          required: true
+          schema:
+            type: string
+  /email-verification:
+    get:
+      summary: Returns a user by ID.
+      parameters:
+        - name: use
+          in: path
+          required: true
+          description: Parameter description in CommonMark or HTML.
+          schema:
+            type: integer
+            format: int64
+            minimum: 1
+      responses:
+        "200":
+          description: OK
+  /forgot-password:
+    post:
+      summary: User forgot password
+      responses:
+        "201":
+          description: Reset Email is send successfully, please check your inbox.
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              type: object
+              properties:
+                email:
+                  type: string
+  /reset-password:
+    post:
+      summary: User reset password
+      responses:
+        "200":
+          description: Your password has been updated <3.
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              type: object
+              properties:
+                email:
+                  type: string
+                password:
+                  type: string
+                password_confirmation:
+                  type: string
+  /logout:
+    post:
+      summary: User logout
+      security:
+        - bearerAuth: []
+      responses:
+        "200":
+          description: Successfully logged out.
+  /checkToken:
+    post:
+      summary: User can check bearer token validation
+      security:
+        - bearerAuth: []
+      responses:
+        "200":
+          description: Okay
+  /notifications:
+    post:
+      summary: Return read and unread notification arrays
+      security:
+        - bearerAuth: []
+      responses:
+        "200":
+          description: Return read and unread notification arrays
+  /markAsRead:
+    post:
+      summary: Mark notification read
+      security:
+        - bearerAuth: []
+      responses:
+        "200":
+          description: Notification read
+  /markAllAsRead:
+    post:
+      summary: Mark all notification read
+      security:
+        - bearerAuth: []
+      responses:
+        "200":
+          description: All notifications read
+  /profile:
+    put:
+      summary: Update user profile
+      security:
+        - bearerAuth: []
+      responses:
+        "200":
+          description: Profile updated successfully
+  /movies:
+    post:
+      summary: User can add movie
+      security:
+        - bearerAuth: []
+      responses:
+        "201":
+          description: Movie added successfully.
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              type: object
+              properties:
+                title_en:
+                  type: string
+                  example: Sherekilebi
+                title_ka:
+                  type: string
+                  example: შერეკილები
+                director_en:
+                  type: string
+                  example: Ermalo
+                director_ka:
+                  type: string
+                  example: ერმალო
+                genre:
+                  type: string
+                  example: Horror
+                description_en:
+                  type: string
+                  example: Mdzafri
+                description_ka:
+                  type: string
+                  example: მძაფრი
+                year:
+                  type: integer
+                  example: 1999
+                budget:
+                  type: integer
+                  example: 2394232
+                thumbnail:
+                  type: string
+                  example: base64
