--- a/public/app.yaml
+++ b/public/app.yaml
@@ -78,15 +78,15 @@ paths:
       summary: Email verification.
       parameters:
         - in: query
-          name:
-          schema:
-            type: string
-          description: The number of items to skip before starting to collect the result set
-        - in: query
-          name: limit
+          name: id
           schema:
             type: integer
-          description: The numbers of items to return
+          description: The id of user email verification
+        - in: query
+          name: hash
+          schema:
+            type: string
+          description: The hash of email verification
       responses:
         "200":
           description: OK
@@ -216,4 +216,4 @@ paths:
                   example: 2394232
                 thumbnail:
                   type: string
-                  example: base64
+                  example: base
