--- a/public/app.yaml
+++ b/public/app.yaml
@@ -412,3 +412,12 @@ paths:
       responses:
         "204":
           description: Okay.
+
+  /users:
+    get:
+      summary: Return quotes array
+      security:
+        - bearerAuth: []
+      responses:
+        "200":
+          description: Okay.
